--- a/App.Config
+++ b/App.Config
@@ -7,7 +7,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="ETradeContext" connectionString="server=(localdb)\MSSQLLocalDB;initial catalog=ETicaret;integrated security=true"
+    <add name="NorthwindContext" connectionString="Server = (localdb)\MSSQLLocalDB;Initial Catalog= Northwind; Integrated Security=true"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <startup> 
